@@ -1,0 +1,5 @@
+// This pattern is used by a lot of autoconf scripts, so don't
+// complain about it unless -pedantic.
+// { dg-options "" }
+
+int main () { main (); return 0; }
